--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "https://skieurfoufou.github.io/react-cv"
+    "homepage": "https://skieurfoufou.github.io/cv"
   }
 }
