--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -42,7 +43,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "homepage": "https://skieurfoufou.github.io/cv"
-  }
+    ]
+  },
+  "homepage": "https://skieurfoufou.github.io/cv"
 }
