--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://skieurfoufou.github.io/cv"
+  "homepage": "https://skieurfoufou.github.io"
 }
